clean-up code, fix some mobile spacing #6

--- a/style.css
+++ b/style.css
@@ -1,30 +1,132 @@
-@media only screen and (max-width: 415px) {
+/* Adjust classes for mobile views */
+@media only screen and (max-width: 400px) {
+
+	.push-right {
+		margin-left: 5%;
+	}  
+
+	.square {
+		margin-bottom: 10%;
+		margin-right: auto;
+		margin-left: auto;
+		height: 40px;
+		width: 100%;
+		background-color: #FFFFFF;
+	}
+
+	.landing-pic {
+		padding-top: 5%;
+		padding-bottom: 35%;
+		max-height: 55%;
+		max-width: 70%;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	display: block;
+	}
+
+
+	.portfolio-pic {
+
+		max-height: 40%;
+		max-width: 50%;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	display: block;
+	}
+
+	.mobile {
+		margin-top: 30% !important;
+	}
+
+	.filter-button {
+		position: relative;
+		top: 20px;
+		margin-bottom: 5%;
+		text-align: center;
+		width: 100%;
+	}
+
+	.portfolio-mobile {
+		margin-top: 10%;
+	}
+
+	.white-small {
+	background-color: white;
+	height: 300px
+	}
+
+	.white-med {
+		background-color: white;
+		height: 170%;
+	}
+
+}
+
+/* Adjust classes for mobile views */
+@media only screen and (max-width: 699px) and (min-width: 401px) {
   
 	.push-right {
 		margin-left: 5%;
 	}  
 
 	.square {
-	margin-bottom: 10%;
-	margin-right: auto;
-	margin-left: auto;
-	height: 40px;
-	width: 100%;
-	background-color: #FFFFFF;
+		margin-bottom: 10%;
+		margin-right: auto;
+		margin-left: auto;
+		height: 40px;
+		width: 100%;
+		background-color: #FFFFFF;
 	}
 
-.landing-pic {
-	padding-top: 5%;
-	padding-bottom: 35%;
-	/*margin-left: 5%;*/
-	max-height: 55%;
-	max-width: 70%;
-  	margin-left: auto;
-  	margin-right: auto;
-  	display: block;
+	.landing-pic {
+		padding-top: 5%;
+		padding-bottom: 35%;
+		max-height: 55%;
+		max-width: 70%;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	display: block;
+	}
+
+	.portfolio-pic {
+
+		max-height: 40%;
+		max-width: 50%;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	display: block;
+	}
+
+
+	.white-small {
+		background-color: white;
+		height: 400px
+	}
+
+	.white-med {
+		background-color: white;
+		height: 225%;
+	}
+
+	.filter-button {
+		position: relative;
+		top: 20px;
+		margin-bottom: 5%;
+		text-align: center;
+		width: 100%;
+	}
+
+	.mobile {
+		margin-top: 10% !important;
+	}
+
+	.portfolio-mobile {
+		margin-top: 10%;
 	}
 }
-@media only screen and (min-width: 415px) {
+
+/* Adjust classes for wider views*/
+@media only screen and (min-width: 700px) {
   
 	.push-right {
 		margin-left: 0%;
@@ -41,14 +143,40 @@
 	.landing-pic {
 		padding-top: 5%;
 		padding-bottom: 35%;
-		/*margin-left: 5%;*/
 		max-height: 40%;
 		max-width: 65%;
 	  	margin-left: auto;
 	  	margin-right: auto;
 	  	display: block;
 	}
-	
+
+	.portfolio-pic {
+
+		max-height: 40%;
+		max-width: 50%;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	display: block;
+	}
+
+	.filter-button {
+		position: absolute;
+		top: 0px;
+		right: 0px;
+		margin-right: 15%;
+		margin-top: 3%;
+	}
+
+	.white-small {
+		background-color: white;
+		height: 300px
+	}
+
+	.white-med {
+		background-color: white;
+		height: 850px;
+	}
+
 }
 
 body {
@@ -56,6 +184,7 @@ body {
 	background: #343a40 !important;
 	overflow: auto;
 }
+
 
 #content {
 	text-align: center;
@@ -73,15 +202,6 @@ body {
 
 .background {
 	background-color: blue;
-}
-
-.portfolio-pic {
-
-	max-height: 40%;
-	max-width: 50%;
-  	margin-left: auto;
-  	margin-right: auto;
-  	display: block;
 }
 
 .fill {
@@ -108,14 +228,6 @@ body {
 .center-list {
 	display:table; 
 	margin:0 auto;
-}
-
-.filter-button {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	margin-right: 15%;
-	margin-top: 3%;
 }
 
 .grey {
